Switch widget as default widget for Number or String items with command options
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>